...
                                <rect key="frame" x="16" y="488" width="288" height="50"/>
                                <color key="backgroundColor" red="0.62745098039215685" green="0.039215686274509803" blue="0.6470588235294118" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="exe-HT-qua"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="20"/>
                                <state key="normal" title="Get Started">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <variation key="heightClass=regular-widthClass=regular">
                                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="25"/>
                                </variation>
                                <connections>
...
                                <rect key="frame" x="16" y="377.5" width="288" height="50"/>
                                <color key="backgroundColor" red="0.82352941176470584" green="0.039215686274509803" blue="0.88235294117647056" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="cgL-M4-iXf"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="20"/>
                                <state key="normal" title="Log in">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <variation key="heightClass=regular-widthClass=regular">
                                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="25"/>
                                </variation>
                                <connections>
...
                                    </label>
                                </subviews>
                            </stackView>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="mhA-n1-IT9">
                                <rect key="frame" x="16" y="139.5" width="288" height="122"/>
                                <subviews>
                                    <textField opaque="NO" alpha="0.94999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sBj-T1-7FI" customClass="CustomTextFieldHalfRound" customModule="smartremit" customModuleProvider="t
                                        <rect key="frame" x="0.0" y="0.0" width="288" height="50"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="Itv-9q-y0e"/>
                                        </constraints>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="20"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <variation key="heightClass=regular-widthClass=regular">
                                            <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="25"/>
                                        </variation>
                                    </textField>
                                    <textField opaque="NO" alpha="0.94999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VTx-pB-tg5" customClass="CustomTextFieldHalfRound" customModule="smartremit" customModuleProvider="t
                                        <rect key="frame" x="0.0" y="72" width="288" height="50"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="mXh-qE-gto"/>
                                        </constraints>
                                        <nil key="textColor"/>
...
                                <rect key="frame" x="17.5" y="344" width="285" height="50"/>
                                <color key="backgroundColor" red="0.82352941176470584" green="0.039215686274509803" blue="0.88235294117647056" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="C2v-vU-bCu"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="20"/>
                                <state key="normal" title="Resend Code">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <variation key="heightClass=regular-widthClass=regular">
                                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="25"/>
                                </variation>
                                <connections>
...
